# Rust-Vulkan

./: .gitignore  Cargo.toml  README.md
resources/config/: default_config.json
resources/shaders/: Atmosphere.hlsl  Atmosphere.spv  Atmosphere.usf  FullscreenTriangle.hlsl  FullscreenTriangle_frag.hlsl  FullscreenTriangle_frag.spv  FullscreenTriangle_vert.spv  atmosphere_frag.hlsl  basic_frag.hlsl  basic_vert.hlsl  common.hlsl  compile.bat  compile_hlsl.bat  test_vert.spv  test_vertex.vert
resources/shaders/compiled/: atmosphere_frag.spv
scripts/: compile_hlsl.ps1
src/: app.rs  graphics.rs  main.rs  world.rs
src/app/: app.rs
src/camera/: camera.rs  orbit_camera.rs
src/config/: config.rs
src/controls/: controls.rs
src/graphics/: dx_renderer.rs  dxd12_renderer.rs  graphics_api.rs  rhi.rs  vulkan.rs
src/graphics/vulkan/: atmopsheric_scattering.rs  push_constants.rs  transform.rs  transformation.rs  vertex.rs  view_state.rs  vulkan_api.rs  vulkan_data.rs  vulkan_pipeline.rs  vulkan_rhi.rs  vulkan_rhi_data.rs  vulkan_swapchain.rs  vulkan_sync_objects.rs  vulkan_utils.rs
src/utils/: math.rs
src/world/: entity.rs  game_object.rs  transform.rs  world.rs
